--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoFixture" version="3.34.0" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="FluentAssertions" version="4.0.1" targetFramework="net451" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
+  <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
