--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/app.config
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/app.config
@@ -18,6 +18,10 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1507.118" newVersion="4.2.1507.118" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
