--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/packages.config
@@ -5,10 +5,13 @@
   <package id="FluentAssertions" version="3.5.0" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net451" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Moq" version="4.2.1507.0118" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="RazorGenerator.Testing" version="2.3.4" targetFramework="net451" />
+  <package id="ReflectionMagic" version="2.0.0" targetFramework="net451" />
 </packages>
