--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Providers\VacancyProvider\GetPendingQAVacanciesOverviewTests.cs" />
     <Compile Include="Providers\VacancyProvider\VacancyProviderBuilder.cs" />
     <Compile Include="Providers\VacancyProvider\VacancyProviderTests.cs" />
+    <Compile Include="Validators\VacancyPosting\NewVacancyViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\TrainingDetailsViewModelServerValidatorTests.cs" />
     <Compile Include="Validators\VacancyPosting\TrainingDetailsViewModelClientValidatorTests.cs" />
     <Compile Include="Views\Shared\DisplayTemplates\Vacancy\BasicVacancyDetailsTests.cs" />
