Traineeship preview changes

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -300,6 +300,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Views\Shared\DisplayTemplates\Vacancy\_WorkingWeekAndWage.generated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>_WorkingWeekAndWage.cshtml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
@@ -344,6 +349,10 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>TrainingDetails.generated.cs</LastGenOutput>
     </Content>
+    <None Include="Views\Shared\DisplayTemplates\Vacancy\_WorkingWeekAndWage.cshtml">
+      <Generator>RazorGenerator</Generator>
+      <LastGenOutput>_WorkingWeekAndWage.generated.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.Apprenticeships.Application.Interfaces\SFA.Apprenticeships.Application.Interfaces.csproj">
