Traineeship preview changes

--- a/src/SFA.Apprenticeships.Infrastructure.Presentation/SFA.Apprenticeships.Infrastructure.Presentation.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Presentation/SFA.Apprenticeships.Infrastructure.Presentation.csproj
@@ -92,6 +92,7 @@
     <Compile Include="QualificationPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VacancyPresenter.cs" />
+    <Compile Include="VacancyTypePresenter.cs" />
     <Compile Include="WagePresenter.cs" />
   </ItemGroup>
   <ItemGroup>
