--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -143,8 +143,8 @@
     <Compile Include="Schemas\UserProfile\AgencyUserMappers.cs" />
     <Compile Include="Schemas\UserProfile\AgencyUserRepository.cs" />
     <Compile Include="Schemas\UserProfile\Entities\AgencyUser.cs" />
-    <Compile Include="Schemas\UserProfile\Entities\Role.cs" />
-    <Compile Include="Schemas\UserProfile\Entities\Team.cs" />
+    <Compile Include="Schemas\UserProfile\Entities\AgencyUserRole.cs" />
+    <Compile Include="Schemas\UserProfile\Entities\AgencyUserTeam.cs" />
     <Compile Include="Schemas\Vacancy\ApprenticeshipVacancyMappers.cs" />
     <Compile Include="Schemas\Vacancy\ApprenticeshipVacancyRepository.cs" />
     <Compile Include="Schemas\Vacancy\Entities\AdditionalQuestion.cs" />
