Passes search request down to service. Needs service implementation

--- a/src/SFA.Apprenticeships.Application.Candidate/SFA.Apprenticeships.Application.Candidate.csproj
+++ b/src/SFA.Apprenticeships.Application.Candidate/SFA.Apprenticeships.Application.Candidate.csproj
@@ -94,6 +94,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CandidateSearchService.cs" />
     <Compile Include="CandidateService.cs" />
     <Compile Include="CreateCandidateRequest.cs" />
     <Compile Include="SaveCandidateRequest.cs" />
