--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Applications\ApprenticeshipApplicationDetail.cs" />
     <Compile Include="Applications\ApplicationStatuses.cs" />
     <Compile Include="Candidates\CandidateHelper.cs" />
+    <Compile Include="Candidates\CandidateSummary.cs" />
     <Compile Include="Candidates\CommunicationPreference.cs" />
     <Compile Include="Candidates\CommunicationPreferences.cs" />
     <Compile Include="Candidates\DisabilityStatus.cs" />
