--- a/src/SFA.Apprenticeships.Web.Manage.UnitTests/SFA.Apprenticeships.Web.Manage.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage.UnitTests/SFA.Apprenticeships.Web.Manage.UnitTests.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\AgencyUser\AgencyUserProviderBuilder.cs" />
     <Compile Include="Providers\AgencyUser\AgencyUserProviderTests.cs" />
+    <Compile Include="Providers\Candidate\CandidateProviderTests.cs" />
     <Compile Include="Validators\CandidateSearchResultsViewModelClientValidatorTests.cs" />
     <Compile Include="Validators\CandidateSearchViewModelClientValidatorTests.cs" />
     <Compile Include="Validators\CandidateSearchResultsViewModelServerValidatorTests.cs" />
@@ -215,6 +216,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
