--- a/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities/SFA.Apprenticeships.Domain.Entities.csproj
@@ -131,7 +131,7 @@
     <Compile Include="Roles.cs" />
     <Compile Include="Users\AgencyUser.cs" />
     <Compile Include="Users\Name.cs" />
-    <Compile Include="Users\ProviderStatus.cs" />
+    <Compile Include="Users\ProviderStatuses.cs" />
     <Compile Include="Users\ProviderUserStatuses.cs" />
     <Compile Include="Users\ProviderUser.cs" />
     <Compile Include="Users\Role.cs" />
