--- a/src/SFA.Apprenticeships.Web.Manage.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Manage.UnitTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFixture" version="3.34.0" targetFramework="net452" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="FluentAssertions" version="3.5.0" targetFramework="net452" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net452" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net452" />
