--- a/src/SFA.Apprenticeships.Data.Migrate.Console/SFA.Apprenticeships.Data.Migrate.Console.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate.Console/SFA.Apprenticeships.Data.Migrate.Console.csproj
@@ -68,6 +68,10 @@
       <Project>{73c8a0c0-3b18-4ed6-8d14-15f3e009c26c}</Project>
       <Name>SFA.Apprenticeships.Data.Migrate</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Sql\SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj">
+      <Project>{b633ee4e-7a58-4acf-bbd9-0b19730b22fd}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Sql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure.Azure\SFA.Infrastructure.Azure.csproj">
       <Project>{fe5b99f5-66d8-42fc-a8b3-6562837623a4}</Project>
       <Name>SFA.Infrastructure.Azure</Name>
