US1221: fixes around CreatedDateTime etc plus 'over-mapping' dbo.Provider database entity.

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
@@ -139,6 +139,8 @@
     <Compile Include="Common\Formatters.cs" />
     <Compile Include="Schemas\Vacancy\ApprenticeshipVacancyMappersUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeedData.cs" />
+    <Compile Include="TestAssemblySetup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
