removed extraneous uses of DatabaseInitialiser

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
@@ -125,6 +125,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\DatabaseConfigurationProvider.cs" />
     <Compile Include="Schemas\Provider\ProviderMappersTests.cs" />
     <Compile Include="Schemas\Provider\ProviderRepositoryTests.cs" />
     <Compile Include="Schemas\Provider\ProviderUserMappersTests.cs" />
