--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Sql.Tests.csproj
@@ -149,9 +149,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <Content Include="Scripts\InsertVacancyStatusType.sql" />
-    <Content Include="Scripts\InsertVacancyTextFieldValue.sql" />
-    <Content Include="Scripts\InsertVacancyProvisionRelationshipStatusType.sql" />
+    <Content Include="Scripts\InsertVacancyStatusType.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\InsertVacancyTextFieldValue.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Scripts\InsertVacancyProvisionRelationshipStatusType.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\InsertVacancyOwnerRelationship.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
