--- a/src/SFA.Apprenticeships.Infrastructure.ScheduledJobs/SFA.Apprenticeships.Infrastructure.ScheduledJobs.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.ScheduledJobs/SFA.Apprenticeships.Infrastructure.ScheduledJobs.csproj
@@ -334,6 +334,10 @@
       <Project>{A4DE4AF3-F06D-4D0F-AF2E-E72A11BAB49B}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Sql\SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj">
+      <Project>{b633ee4e-7a58-4acf-bbd9-0b19730b22fd}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Sql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.VacancyIndexer\SFA.Apprenticeships.Infrastructure.VacancyIndexer.csproj">
       <Project>{02d19199-a4bb-484a-aa48-208c7b6d819f}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.VacancyIndexer</Name>
