--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -525,6 +525,7 @@
     <Content Include="Views\AgencyUser\_DashboardVacancySummaries.cshtml" />
     <Content Include="Views\AgencyUser\_DashboardHelpDesk.cshtml" />
     <Content Include="Views\Candidate\Search.cshtml" />
+    <Content Include="Views\Candidate\Candidate.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
